Clean up lots of lint warnings and unnecessary/overly generic IDs.